add effect sync

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -25,3 +25,20 @@ public net.minecraft.client.gui.Gui f_92977_ # screenWidth
 public net.minecraft.client.gui.Gui f_92978_ # screenHeight
 
 protected net.minecraft.world.SimpleContainer f_19147_ # items
+
+public net.minecraft.world.entity.LivingEntity f_20945_ # activeEffects
+public net.minecraft.world.entity.LivingEntity f_20948_ # effectsDirty
+public net.minecraft.world.entity.LivingEntity m_142540_(Lnet/minecraft/world/effect/MobEffectInstance;Lnet/minecraft/world/entity/Entity;)V # onEffectAdded
+public net.minecraft.world.entity.LivingEntity m_141973_(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V # onEffectUpdated
+public net.minecraft.world.entity.LivingEntity m_7285_(Lnet/minecraft/world/effect/MobEffectInstance;)V # onEffectRemoved
+public net.minecraft.server.level.ServerPlayer m_142540_(Lnet/minecraft/world/effect/MobEffectInstance;Lnet/minecraft/world/entity/Entity;)V # onEffectAdded
+public net.minecraft.server.level.ServerPlayer m_141973_(Lnet/minecraft/world/effect/MobEffectInstance;ZLnet/minecraft/world/entity/Entity;)V # onEffectUpdated
+public net.minecraft.server.level.ServerPlayer m_7285_(Lnet/minecraft/world/effect/MobEffectInstance;)V # onEffectRemoved
+
+public net.minecraft.world.effect.MobEffectInstance f_19503_ # duration
+public net.minecraft.world.effect.MobEffectInstance f_19504_ # amplifier
+public net.minecraft.world.effect.MobEffectInstance f_19506_ # ambient
+public net.minecraft.world.effect.MobEffectInstance f_19507_ # noCounter
+public net.minecraft.world.effect.MobEffectInstance f_19508_ # visible
+public net.minecraft.world.effect.MobEffectInstance f_19509_ # showIcon
+
