--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ org.gradle.daemon=false
 
 # mod version info
 minecraft_version = 1.18.2
-forge_version = 40.1.0
+forge_version = 40.1.51
+ll_version = 0.0.9.2
 
 # build dependency versions
 forgegradle_version = 5.1.+
