add curios support for tabs

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.daemon=false
 # mod version info
 minecraft_version = 1.18.2
 forge_version = 40.1.51
-ll_version = 0.1.1
+ll_version = 0.1.2
 
 # build dependency versions
 forgegradle_version = 5.1.+
@@ -19,3 +19,4 @@ shadow_version = 7.1.0
 registrate_version = MC1.18.2-1.0.25
 jei_minecraft_version = 1.18.2
 jei_version = 9.7.0.193
+curios_version = 1.18.2-5.0.7.0
