add targeting and effect sync

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -42,3 +42,7 @@ public net.minecraft.world.effect.MobEffectInstance f_19507_ # noCounter
 public net.minecraft.world.effect.MobEffectInstance f_19508_ # visible
 public net.minecraft.world.effect.MobEffectInstance f_19509_ # showIcon
 
+public net.minecraft.client.renderer.LevelRenderer f_109463_ # entityRenderDispatcher
+public net.minecraft.client.renderer.RenderStateShard f_110135_ # ADDITIVE_TRANSPARENCY
+public net.minecraft.client.renderer.RenderStateShard f_110111_ # NO_DEPTH_TEST
+public net.minecraft.client.renderer.RenderStateShard f_173083_ # RENDERTYPE_ENTITY_GLINT_SHADER
