--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -14,6 +14,13 @@ protected net.minecraft.data.recipes.ShapelessRecipeBuilder f_126176_ # advancem
 protected net.minecraft.data.recipes.ShapelessRecipeBuilder f_126177_ # group
 protected net.minecraft.data.recipes.ShapelessRecipeBuilder m_126207_(Lnet/minecraft/resources/ResourceLocation;)V # ensureValid
 
+protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126378_ # advancement
+protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126375_ # base
+protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126376_ # addition
+protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126377_ # result
+protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126379_ # type
+protected net.minecraft.data.recipes.UpgradeRecipeBuilder m_126398_(Lnet/minecraft/resources/ResourceLocation;)V # ensureValid
+
 public net.minecraft.advancements.critereon.StatePropertiesPredicate$RangedPropertyMatcher
 public net.minecraft.advancements.critereon.StatePropertiesPredicate$Builder f_67691_ # matchers
 
