fix menu needed by l2artifact

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -53,3 +53,5 @@ public net.minecraft.client.renderer.LevelRenderer f_109463_ # entityRenderDispa
 public net.minecraft.client.renderer.RenderStateShard f_110135_ # ADDITIVE_TRANSPARENCY
 public net.minecraft.client.renderer.RenderStateShard f_110111_ # NO_DEPTH_TEST
 public net.minecraft.client.renderer.RenderStateShard f_173083_ # RENDERTYPE_ENTITY_GLINT_SHADER
+
+public net.minecraft.world.inventory.AbstractContainerMenu m_38895_(Lnet/minecraft/world/inventory/DataSlot;)Lnet/minecraft/world/inventory/DataSlot; # addDataSlot
