--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -14,18 +14,22 @@ protected net.minecraft.data.recipes.ShapelessRecipeBuilder f_126176_ # advancem
 protected net.minecraft.data.recipes.ShapelessRecipeBuilder f_126177_ # group
 protected net.minecraft.data.recipes.ShapelessRecipeBuilder m_126207_(Lnet/minecraft/resources/ResourceLocation;)V # ensureValid
 
-protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126378_ # advancement
-protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126375_ # base
-protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126376_ # addition
-protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126377_ # result
-protected net.minecraft.data.recipes.UpgradeRecipeBuilder f_126379_ # type
-protected net.minecraft.data.recipes.UpgradeRecipeBuilder m_126398_(Lnet/minecraft/resources/ResourceLocation;)V # ensureValid
+protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_266090_ # advancement
+protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_265893_ # base
+protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_265959_ # addition
+protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_266005_ # result
+protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder f_266006_ # type
+protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder m_266305_(Lnet/minecraft/resources/ResourceLocation;)V # ensureValid
 
 public net.minecraft.advancements.critereon.StatePropertiesPredicate$RangedPropertyMatcher
 public net.minecraft.advancements.critereon.StatePropertiesPredicate$Builder f_67691_ # matchers
 
-public net.minecraft.world.item.crafting.UpgradeRecipe f_44518_ # base
-public net.minecraft.world.item.crafting.UpgradeRecipe f_44519_ # addition
+public net.minecraft.world.item.crafting.SmithingTransformRecipe f_265888_ # base
+public net.minecraft.world.item.crafting.SmithingTransformRecipe f_265907_ # addition
+public net.minecraft.world.item.crafting.SmithingTransformRecipe f_266098_ # result
+
+public net.minecraft.world.item.crafting.ShapedRecipe f_44149_ # result
+public net.minecraft.world.item.crafting.ShapelessRecipe f_44243_ # result
 
 public net.minecraft.client.gui.Gui f_92986_ # minecraft
 public net.minecraft.client.gui.Gui f_92977_ # screenWidth
