--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,7 @@ mixin {
 }
 
 repositories {
+    maven { url 'https://jitpack.io' }
     maven {
         // Location of the maven for vazkii's mods
         name 'blamejared'
@@ -110,9 +111,14 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+    implementation("com.github.LlamaLad7:MixinExtras:0.1.1")
+    annotationProcessor("com.github.LlamaLad7:MixinExtras:0.1.1")
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
+    minecraftLibrary("com.github.LlamaLad7:MixinExtras:0.1.1")
 
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
+
+    jarJar(group: 'com.github.LlamaLad7', name: 'MixinExtras', version: "[0.1.1,)")
     jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.19.3,MC1.20)")
 
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
