--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ org.gradle.daemon=false
 minecraft_version = 1.19.4
 forge_version = 45.0.0
 ll_version = 2.1.0
+mixin_extras_version = 0.2.0-beta.6
 
 # build dependency versions
 forgegradle_version = 5.1.+
