--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -28,6 +28,10 @@ public net.minecraft.world.item.crafting.SmithingTransformRecipe f_265888_ # bas
 public net.minecraft.world.item.crafting.SmithingTransformRecipe f_265907_ # addition
 public net.minecraft.world.item.crafting.SmithingTransformRecipe f_266098_ # result
 
+public net.minecraft.world.item.crafting.LegacyUpgradeRecipe f_265911_ # base
+public net.minecraft.world.item.crafting.LegacyUpgradeRecipe f_265910_ # addition
+public net.minecraft.world.item.crafting.LegacyUpgradeRecipe f_265880_ # result
+
 public net.minecraft.world.item.crafting.ShapedRecipe f_44149_ # result
 public net.minecraft.world.item.crafting.ShapelessRecipe f_44243_ # result
 
