--- a/gradle.properties
+++ b/gradle.properties
@@ -6,18 +6,17 @@ org.gradle.daemon=false
 
 # mod version info
 minecraft_version = 1.19.4
-forge_version = 45.0.0
-ll_version = 2.1.2
-mixin_extras_version = 0.2.0-beta.6
+forge_version = 45.0.50
+ll_version = 2.1.4-pre2
 
 # build dependency versions
 forgegradle_version = 5.1.+
 mixingradle_version = 0.7-SNAPSHOT
 mixin_version = 0.8.5
-shadow_version = 7.1.0
+mixin_extras_version = 0.2.0-beta.6
 
 # dependency versions
 registrate_version = MC1.19.4-1.2.14
-jei_minecraft_version = 1.19.3-forge
-jei_version = 12.0.2.2
-curios_version = 1.19.3-5.1.2.0
+jei_minecraft_version = 1.19.4-forge
+jei_version = 13.1.0.7
+curios_version = 1.19.4-5.1.5.2
