--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -63,3 +63,4 @@ public net.minecraft.client.renderer.RenderStateShard f_110111_ # NO_DEPTH_TEST
 public net.minecraft.client.renderer.RenderStateShard f_173083_ # RENDERTYPE_ENTITY_GLINT_SHADER
 
 public net.minecraft.world.inventory.AbstractContainerMenu m_38895_(Lnet/minecraft/world/inventory/DataSlot;)Lnet/minecraft/world/inventory/DataSlot; # addDataSlot
+public net.minecraft.world.entity.player.Inventory m_36014_(Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)Z # hasRemainingSpaceForItem
