--- a/build.gradle
+++ b/build.gradle
@@ -125,12 +125,14 @@ dependencies {
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
-    implementation fg.deobf("dev.xkmc.l2complements:l2complements:2.1.0.1")
-    implementation fg.deobf('dev.xkmc.modulargolems:modulargolems:2.1.0')
-    runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.1.1.2")
-    runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.1.2")
-    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.1.1")
-    implementation fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.1.0.0")
+    runtimeOnly fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.0.0")
+    runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.2.0.pre0-slim")
+    runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.2.0.pre0")
+    runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.2.0.pre0")
+    runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.2.0.pre2')
+    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.2.0.pre0")
+    runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.2.0.pre0")
+    runtimeOnly fg.deobf("dev.xkmc.traderefresh:traderefresh:2.1.1-slim")
 
     runtimeOnly fg.deobf('curse.maven:wthit-forge-455982:4512108')
     runtimeOnly fg.deobf('curse.maven:badpackets-615134:4438956')
@@ -140,7 +142,7 @@ dependencies {
     runtimeOnly fg.deobf('curse.maven:bookshelf-228525:4454755')
     runtimeOnly fg.deobf('curse.maven:enchantment-descriptions-250419:4445054')
     runtimeOnly fg.deobf('curse.maven:appleskin-248787:4440123')
-    implementation fg.deobf('curse.maven:the-twilight-forest-227639:4516391')
+    runtimeOnly fg.deobf('curse.maven:the-twilight-forest-227639:4516391')
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
