--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,7 @@ dependencies {
     runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.2.0.pre0")
     runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.2.0.pre0")
     runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.2.0.pre3')
-    //runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.2.0.pre0")
+    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.2.0.pre1")
     //runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.2.0.pre0")
     runtimeOnly fg.deobf("dev.xkmc.traderefresh:traderefresh:2.1.1-slim")
 
