--- a/build.gradle
+++ b/build.gradle
@@ -125,13 +125,13 @@ dependencies {
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
-    runtimeOnly fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.0.0")
-    runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.2.0.pre2-slim")
-    runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.2.0.pre0")
-    runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.2.0.pre0")
-    runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.2.0.pre3')
-    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.2.0.pre1")
-    //runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.2.0.pre0")
+    implementation fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.0.0")
+    implementation fg.deobf("dev.xkmc.l2backpack:l2backpack:2.2.0.pre2-slim")
+    implementation fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.2.0.pre2")
+    implementation fg.deobf("dev.xkmc.l2complements:l2complements:2.2.0.pre0")
+    implementation fg.deobf('dev.xkmc.modulargolems:modulargolems:2.2.0.pre3')
+    implementation fg.deobf("dev.xkmc.l2archery:l2archery:2.2.0.pre1")
+    implementation fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.2.0.pre1")
     runtimeOnly fg.deobf("dev.xkmc.traderefresh:traderefresh:2.1.1-slim")
 
     runtimeOnly fg.deobf('curse.maven:wthit-forge-455982:4512108')
