--- a/build.gradle
+++ b/build.gradle
@@ -128,10 +128,10 @@ dependencies {
     runtimeOnly fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.0.0")
     runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.3.2-slim")
     runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.2.0.pre4")
-    runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.3.0")
-    runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.2.0.pre3')
-    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.2.0.pre1")
-    runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.2.0.pre1")
+    runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.3.1")
+    runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.2.2')
+    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.2.2")
+    runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.3.0")
     runtimeOnly fg.deobf("dev.xkmc.traderefresh:traderefresh:2.1.1-slim")
     runtimeOnly fg.deobf("dev.xkmc.lasertransport:lasertransport:2.2.0.pre5-slim")
 
