--- a/build.gradle
+++ b/build.gradle
@@ -117,9 +117,9 @@ dependencies {
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
     jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.19.3,MC1.20)")
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2serial:l2serial:1.1.1")) {
+    implementation fg.deobf(jarJar("dev.xkmc.l2serial:l2serial:1.1.2")) {
         transitive = false
-        jarJar.ranged(it, "[1.1.1,)")
+        jarJar.ranged(it, "[1.1.2,)")
     }
 
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
@@ -143,7 +143,7 @@ dependencies {
     runtimeOnly fg.deobf('curse.maven:bookshelf-228525:4454755')
     runtimeOnly fg.deobf('curse.maven:enchantment-descriptions-250419:4445054')
     runtimeOnly fg.deobf('curse.maven:appleskin-248787:4440123')
-    runtimeOnly fg.deobf('curse.maven:the-twilight-forest-227639:4516391')
+    //runtimeOnly fg.deobf('curse.maven:the-twilight-forest-227639:4516391')
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
