--- a/build.gradle
+++ b/build.gradle
@@ -115,29 +115,30 @@ dependencies {
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
 
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
-    jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.19.3,MC1.20)")
+    jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.20,MC1.21)")
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2serial:l2serial:1.1.2")) {
+    implementation fg.deobf(jarJar("dev.xkmc.l2serial:l2serial:1.2.0")) {
         transitive = false
-        jarJar.ranged(it, "[1.1.2,)")
+        jarJar.ranged(it, "[1.2.0,)")
     }
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.0.4")) {
+    /*implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.0.4")) {
         transitive = false
         jarJar.ranged(it, "[0.0.4,)")
-    }
+    }*/
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2screentracker:l2screentracker:0.0.1")) {
+    /*implementation fg.deobf(jarJar("dev.xkmc.l2screentracker:l2screentracker:0.0.1")) {
         transitive = false
         jarJar.ranged(it, "[0.0.1,)")
-    }
+    }*/
 
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
-    runtimeOnly fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.0.0")
-    runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.0.4")
-    runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2itemselector:0.0.1")
+    //runtimeOnly fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.0.0")
+    //runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.0.4")
+    //runtimeOnly fg.deobf("dev.xkmc.l2itemselector:l2itemselector:0.0.1")
+
     //runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.3.2-slim")
     //runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.3.0")
     //runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.3.1")
@@ -147,14 +148,14 @@ dependencies {
     //runtimeOnly fg.deobf("dev.xkmc.traderefresh:traderefresh:2.1.1-slim")
     //runtimeOnly fg.deobf("dev.xkmc.lasertransport:lasertransport:2.2.0.pre5-slim")
 
-    runtimeOnly fg.deobf('curse.maven:wthit-forge-455982:4512108')
-    runtimeOnly fg.deobf('curse.maven:badpackets-615134:4438956')
-    runtimeOnly fg.deobf('curse.maven:attributefix-280510:4445193')
-    runtimeOnly fg.deobf('curse.maven:max-health-fix-492246:4447240')
+    //runtimeOnly fg.deobf('curse.maven:wthit-forge-455982:4512108')
+    //runtimeOnly fg.deobf('curse.maven:badpackets-615134:4438956')
+    //runtimeOnly fg.deobf('curse.maven:attributefix-280510:4445193')
+    //runtimeOnly fg.deobf('curse.maven:max-health-fix-492246:4447240')
 
-    runtimeOnly fg.deobf('curse.maven:bookshelf-228525:4454755')
-    runtimeOnly fg.deobf('curse.maven:enchantment-descriptions-250419:4445054')
-    runtimeOnly fg.deobf('curse.maven:appleskin-248787:4440123')
+    //runtimeOnly fg.deobf('curse.maven:bookshelf-228525:4454755')
+    //runtimeOnly fg.deobf('curse.maven:enchantment-descriptions-250419:4445054')
+    //runtimeOnly fg.deobf('curse.maven:appleskin-248787:4440123')
     //runtimeOnly fg.deobf('curse.maven:the-twilight-forest-227639:4516391')
 }
 
