--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ org.gradle.daemon=false
 
 # mod version info
 minecraft_version = 1.20
-forge_version = 46.0.1
-ll_version = 2.4.0
+forge_version = 46.0.14
+ll_version = 2.4.0-a0
 
 # build dependency versions
 forgegradle_version = 5.1.+
@@ -16,7 +16,7 @@ mixin_version = 0.8.5
 mixin_extras_version = 0.2.0-beta.8
 
 # dependency versions
-registrate_version = MC1.19.4-1.2.14
-jei_minecraft_version = 1.19.4-forge
+registrate_version = MC1.20-1.3.1
+jei_minecraft_version = 1.20-forge
 jei_version = 14.0.0.4
-curios_version = 1.19.4-5.1.5.2
+curios_version = 5.2.0-beta.1+1.20
