--- a/build.gradle
+++ b/build.gradle
@@ -141,6 +141,9 @@ dependencies {
 
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    implementation fg.deobf("curse.maven:quark-243121:4587248")
+    implementation fg.deobf("curse.maven:autoreglib-250363:4100299")
+    implementation fg.deobf("curse.maven:quark-oddities-301051:3575623")
 
 }
 
