--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -64,3 +64,5 @@ public net.minecraft.client.renderer.RenderStateShard f_173083_ # RENDERTYPE_ENT
 
 public net.minecraft.world.inventory.AbstractContainerMenu m_38895_(Lnet/minecraft/world/inventory/DataSlot;)Lnet/minecraft/world/inventory/DataSlot; # addDataSlot
 public net.minecraft.world.entity.player.Inventory m_36014_(Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)Z # hasRemainingSpaceForItem
+
+public net.minecraft.world.level.Level m_255157_(Lnet/minecraft/world/level/GameRules$Key;)Lnet/minecraft/world/level/Explosion$BlockInteraction; # getDestroyType
