--- a/build.gradle
+++ b/build.gradle
@@ -153,10 +153,10 @@ dependencies {
 // project specific
 
 repositories {
-    maven { url 'https://jitpack.io' }
     flatDir {
         dirs 'libs'
     }
+    maven { url 'https://jitpack.io' }
     maven { // Registrate
         url "https://maven.tterrag.com/"
     }
@@ -175,6 +175,7 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    mavenLocal();
 }
 
 dependencies {
@@ -187,9 +188,9 @@ dependencies {
         jarJar.ranged(it, "[1.2.0,)")
     }
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.1.1")) {
+    implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.1.3")) {
         transitive = false
-        jarJar.ranged(it, "[0.1.1,)")
+        jarJar.ranged(it, "[0.1.3,)")
     }
 
     implementation fg.deobf(jarJar("dev.xkmc.l2screentracker:l2screentracker:0.1.0")) {
@@ -204,10 +205,10 @@ dependencies {
     runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.4.1-slim")
     runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.3-slim")
     runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.2-slim')
-    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.4.1")
+    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.4.2")
     runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.4.2")
 
-    //runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.3.0")
+    runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.4.0-slim")
 
     //runtimeOnly fg.deobf("dev.xkmc.traderefresh:traderefresh:2.1.1-slim")
     //runtimeOnly fg.deobf("dev.xkmc.lasertransport:lasertransport:2.2.0.pre5-slim")
