--- a/build.gradle
+++ b/build.gradle
@@ -144,7 +144,7 @@ dependencies {
         implementation("com.github.llamalad7.mixinextras:mixinextras-forge:${mixin_extras_version}")
     }
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
-    implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
+    compileOnly fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
     if (rootMod.toBoolean()) {
         jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.20,MC1.21)")
     }
@@ -199,27 +199,30 @@ dependencies {
     }
 
     runtimeOnly fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.1.0")
-    runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.1.2")
+    runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.1.3")
     runtimeOnly fg.deobf("dev.xkmc.l2itemselector:l2itemselector:0.1.1")
 
     runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.4.1-slim")
-    runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.3-slim")
+    runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.6-slim")
     runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.2-slim')
-    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.4.2")
-    runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.4.2")
+    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.4.5")
+    runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.4.6")
 
     runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.4.0-slim")
+
+    runtimeOnly fg.deobf("curse.maven:create-328085:4626108")
+    implementation fg.deobf("curse.maven:just-enough-effect-descriptions-jeed-532286:4599236")
+
+    runtimeOnly fg.deobf("curse.maven:badpackets-615134:4438956")
+    runtimeOnly fg.deobf("curse.maven:wthit-forge-455982:4596739")
+    runtimeOnly fg.deobf("curse.maven:attributefix-280510:4588114")
+    runtimeOnly fg.deobf("curse.maven:bookshelf-228525:4581675")
+    runtimeOnly fg.deobf("curse.maven:enchantment-descriptions-250419:4587429")
+    runtimeOnly fg.deobf("curse.maven:appleskin-248787:4605078")
 
     //runtimeOnly fg.deobf("dev.xkmc.traderefresh:traderefresh:2.1.1-slim")
     //runtimeOnly fg.deobf("dev.xkmc.lasertransport:lasertransport:2.2.0.pre5-slim")
 
-    //runtimeOnly fg.deobf('curse.maven:wthit-forge-455982:4512108')
-    //runtimeOnly fg.deobf('curse.maven:badpackets-615134:4438956')
-    //runtimeOnly fg.deobf('curse.maven:attributefix-280510:4445193')
     //runtimeOnly fg.deobf('curse.maven:max-health-fix-492246:4447240')
-
-    //runtimeOnly fg.deobf('curse.maven:bookshelf-228525:4454755')
-    //runtimeOnly fg.deobf('curse.maven:enchantment-descriptions-250419:4445054')
-    //runtimeOnly fg.deobf('curse.maven:appleskin-248787:4440123')
     //runtimeOnly fg.deobf('curse.maven:the-twilight-forest-227639:4516391')
 }
