--- a/build.gradle
+++ b/build.gradle
@@ -156,7 +156,12 @@ repositories {
     flatDir {
         dirs 'libs'
     }
-    maven { url 'https://jitpack.io' }
+    maven {
+        url 'https://jitpack.io'
+        content {
+            includeGroup "com.github.llamalad7.mixinextras"
+        }
+    }
     maven { // Registrate
         url "https://maven.tterrag.com/"
     }
@@ -174,6 +179,11 @@ repositories {
         content {
             includeGroup "curse.maven"
         }
+    }
+    maven {
+        // Location of the maven that hosts JEI files (and TiC)
+        name 'Progwml6 maven'
+        url 'https://dvs1.progwml6.com/files/maven'
     }
     mavenLocal();
 }
@@ -200,13 +210,13 @@ dependencies {
 
     runtimeOnly fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.1.0")
     runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.1.5")
-    runtimeOnly fg.deobf("dev.xkmc.l2itemselector:l2itemselector:0.1.2")
+    runtimeOnly fg.deobf("dev.xkmc.l2itemselector:l2itemselector:0.1.4")
 
-    runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.4.1-slim")
-    runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.6-slim")
-    runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.2-slim')
-    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.4.5")
-    runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.4.6")
+    runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.4.9-slim")
+    runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.16-slim")
+    runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.13-slim')
+    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.4.7")
+    runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.4.18")
 
     runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.4.0-slim")
 
