--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,12 @@ mixin_version = 0.8.5
 minecraft_version = 1.20.1
 forge_version = 47.1.3
 mixin_extras_version = 0.2.0-beta.8
-registrate_version = MC1.20-1.3.3
+registrate_version = MC1.20-1.3.11
 jei_minecraft_version = 1.20.1-forge
 jei_version = 15.2.0.23
-curios_version = 5.2.0-beta.3+1.20.1
+curios_version = 5.3.2+1.20.1
 
 modid = l2library
-ll_version = 2.5.1
+ll_version = 2.5.2-pre0
 lljij = true
 rootMod = true
