--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -23,6 +23,8 @@ protected net.minecraft.data.recipes.SmithingTransformRecipeBuilder m_266305_(Ln
 
 public net.minecraft.advancements.critereon.StatePropertiesPredicate$RangedPropertyMatcher
 public net.minecraft.advancements.critereon.StatePropertiesPredicate$Builder f_67691_ # matchers
+public net.minecraft.advancements.Advancement$Builder <init>(Z)V # Builder
+public net.minecraft.advancements.Advancement$Builder <init>(Lnet/minecraft/resources/ResourceLocation;Lnet/minecraft/advancements/DisplayInfo;Lnet/minecraft/advancements/AdvancementRewards;Ljava/util/Map;[[Ljava/lang/String;Z)V # Builder
 
 public net.minecraft.world.item.crafting.SmithingTransformRecipe f_265888_ # base
 public net.minecraft.world.item.crafting.SmithingTransformRecipe f_265907_ # addition
@@ -66,3 +68,4 @@ public net.minecraft.world.inventory.AbstractContainerMenu m_38895_(Lnet/minecra
 public net.minecraft.world.entity.player.Inventory m_36014_(Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)Z # hasRemainingSpaceForItem
 
 public net.minecraft.world.level.Level m_255157_(Lnet/minecraft/world/level/GameRules$Key;)Lnet/minecraft/world/level/Explosion$BlockInteraction; # getDestroyType
+
