--- a/build.gradle
+++ b/build.gradle
@@ -193,24 +193,35 @@ dependencies {
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2serial:l2serial:1.2.0")) {
+    implementation fg.deobf(jarJar("dev.xkmc.l2serial:l2serial:1.2.1")) {
         transitive = false
-        jarJar.ranged(it, "[1.2.0,)")
+        jarJar.ranged(it, "[1.2.1,)")
     }
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.1.5")) {
+    implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.2.0")) {
         transitive = false
-        jarJar.ranged(it, "[0.1.5,)")
+        jarJar.ranged(it, "[0.2.0,)")
     }
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2screentracker:l2screentracker:0.1.3")) {
+    implementation fg.deobf(jarJar("dev.xkmc.l2screentracker:l2screentracker:0.1.4")) {
         transitive = false
-        jarJar.ranged(it, "[0.1.3,)")
+        jarJar.ranged(it, "[0.1.4,)")
     }
 
-    runtimeOnly fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.1.0")
-    runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.1.5")
-    runtimeOnly fg.deobf("dev.xkmc.l2itemselector:l2itemselector:0.1.4")
+    runtimeOnly fg.deobf(jarJar("dev.xkmc.l2modularblock:l2modularblock:1.1.0")) {
+        transitive = false
+        jarJar.ranged(it, "[1.1.0,)")
+    }
+
+    runtimeOnly fg.deobf(jarJar("dev.xkmc.l2damagetracker:l2damagetracker:0.2.2")) {
+        transitive = false
+        jarJar.ranged(it, "[0.2.2,)")
+    }
+
+    runtimeOnly fg.deobf(jarJar("dev.xkmc.l2itemselector:l2itemselector:0.1.7")) {
+        transitive = false
+        jarJar.ranged(it, "[0.1.7,)")
+    }
 
     runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.4.12-slim")
     runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.18-slim")
