--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@ jei_version = 15.2.0.23
 curios_version = 5.3.4+1.20.1
 
 modid = l2library
-ll_version = 2.4.22-pre2
+ll_version = 2.4.22
 lljij = true
 rootMod = true
