--- a/build.gradle
+++ b/build.gradle
@@ -213,16 +213,12 @@ dependencies {
         jarJar.ranged(it, "[1.1.0,)")
     }
 
-    runtimeOnly fg.deobf(jarJar("dev.xkmc.l2damagetracker:l2damagetracker:0.2.2")) {
-        transitive = false
-        jarJar.ranged(it, "[0.2.2,)")
-    }
-
     runtimeOnly fg.deobf(jarJar("dev.xkmc.l2itemselector:l2itemselector:0.1.7")) {
         transitive = false
         jarJar.ranged(it, "[0.1.7,)")
     }
 
+    runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.2.4")
     runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.4.12-slim")
     runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.18-slim")
     runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.16-slim')
