--- a/build.gradle
+++ b/build.gradle
@@ -1,125 +1,109 @@
-buildscript {
-    repositories {
-        maven { url = 'https://maven.minecraftforge.net' }
-        mavenCentral()
-        maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
-    }
-    dependencies {
-        classpath "org.spongepowered:mixingradle:${mixingradle_version}"
-        classpath 'org.parchmentmc:librarian:1.+'
-    }
-}
-
 plugins {
-    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
+    id 'java-library'
+    id 'eclipse'
+    id 'idea'
+    id 'maven-publish'
+    id 'net.neoforged.gradle.userdev' version '7.0.80'
 }
 
-apply plugin: 'maven-publish'
-apply plugin: 'org.spongepowered.mixin'
-apply plugin: 'org.parchmentmc.librarian.forgegradle'
+version = mod_version
+group = 'dev.kxmc'
 
-version = "${ll_version}"
-group = "dev.kxmc.${modid}"
-archivesBaseName = "${modid}"
+repositories {
+    mavenLocal()
+}
 
-if (lljij.toBoolean()) jarJar.enable()
+base {
+    archivesName = mod_id
+}
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
-minecraft {
-    //mappings channel: 'parchment', version: '1.19.3-2023.03.12-1.19.4'
-    mappings channel: 'official', version: "${minecraft_version}"
-    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-    runs {
-        client {
-            workingDirectory project.file('run')
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'info'
-            mods {
-                "${modid}" {
-                    source sourceSets.main
-                }
-            }
-        }
-
-        server {
-            workingDirectory project.file('run')
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'info'
-            mods {
-                "${modid}" {
-                    source sourceSets.main
-                }
-            }
-        }
-
-        data {
-            workingDirectory project.file('run')
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'info'
-
-            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', "${modid}", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-
-            mods {
-                "${modid}" {
-                    source sourceSets.main
-                }
-            }
-        }
+runs {
+    configureEach {
+        systemProperty 'forge.logging.markers', 'REGISTRIES'
+        systemProperty 'forge.logging.console.level', 'debug'
+        modSource project.sourceSets.main
+    }
+    client {
+        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
+    }
+    server {
+        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
+        programArgument '--nogui'
+    }
+    gameTestServer {
+        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
+    }
+    data {
+        programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
     }
 }
 
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
+
+dependencies {
+    implementation "net.neoforged:neoforge:${neo_version}"
+}
+
+tasks.withType(ProcessResources).configureEach {
+    var replaceProperties = [
+            minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
+            neo_version         : neo_version, neo_version_range: neo_version_range,
+            loader_version_range: loader_version_range,
+            mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
+            mod_authors         : mod_authors, mod_description: mod_description,
+    ]
+    inputs.properties replaceProperties
+
+    filesMatching(['META-INF/mods.toml']) {
+        expand replaceProperties + [project: project]
+    }
+}
+
+// Example configuration to allow publishing using the maven-publish plugin
+publishing {
+    publications {
+        register('mavenJava', MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url "file://${project.projectDir}/repo"
+        }
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
+}
+
+if (lljij.toBoolean()) jarJar.enable()
+
+/* TODO
 mixin {
     add sourceSets.main, "${modid}.refmap.json"
     config "${modid}.mixins.json"
-}
+}*/
 
 jar {
     manifest {
         attributes([
-                "Specification-Title"     : "${modid}",
+                "Specification-Title"     : "${mod_id}",
                 "Specification-Vendor"    : "xkmc",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "xkmc",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                'MixinConfigs'            : "${modid}.mixins.json"
+                'MixinConfigs'            : "${mod_id}.mixins.json"
         ])
     }
 }
 
-java {
-    withSourcesJar()
-}
-
-jar.finalizedBy('reobfJar')
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            artifact jar
-        }
-    }
-    repositories {
-        maven {
-            url "file://${project.projectDir}/mcmodsrepo"
-        }
-    }
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
-}
-
 if (lljij.toBoolean()) {
-
-    reobf {
-        jarJar {}
-    }
 
     tasks.jarJar.finalizedBy('reobfJarJar')
 
@@ -133,20 +117,10 @@ if (lljij.toBoolean()) {
 }
 
 dependencies {
-    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-    compileOnly(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-common:${mixin_extras_version}"))
+    //annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
+    //compileOnly fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
     if (rootMod.toBoolean()) {
-        implementation(jarJar("com.github.llamalad7.mixinextras:mixinextras-forge:${mixin_extras_version}")) {
-            transitive = false
-            jarJar.ranged(it, "[${mixin_extras_version},)")
-        }
-    } else {
-        implementation("com.github.llamalad7.mixinextras:mixinextras-forge:${mixin_extras_version}")
-    }
-    annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
-    compileOnly fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
-    if (rootMod.toBoolean()) {
-        jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.20,MC1.21)")
+        //jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.20,MC1.21)")
     }
 }
 
@@ -156,19 +130,12 @@ repositories {
     flatDir {
         dirs 'libs'
     }
-    maven {
-        url 'https://jitpack.io'
-        content {
-            includeGroup "com.github.llamalad7.mixinextras"
-        }
-    }
     maven { // Registrate
         url "https://maven.tterrag.com/"
     }
     maven {
         url = "https://maven.theillusivec4.top/"
     }
-
     maven {
         // Location of the maven for vazkii's mods
         name 'blamejared'
@@ -190,14 +157,15 @@ repositories {
 
 dependencies {
     // base dep
-    implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
-    implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    //implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
+    //implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2serial:l2serial:1.2.2")) {
+    implementation jarJar("dev.xkmc:l2serial:${l2serial_ver}") {
         transitive = false
-        jarJar.ranged(it, "[1.2.2,)")
+        jarJar.ranged(it, "[${l2serial_ver},)")
     }
 
+    /*
     implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.2.6")) {
         transitive = false
         jarJar.ranged(it, "[0.2.6,)")
@@ -218,25 +186,26 @@ dependencies {
         jarJar.ranged(it, "[0.1.7,)")
     }
 
-    runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.2.4")
-    runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.4.12-slim")
-    runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.18-slim")
-    runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.16-slim')
-    runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.4.9")
-    runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.4.18")
+     */
 
-    runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.4.8-slim")
+    //runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.2.4")
+    //runtimeOnly fg.deobf("dev.xkmc.l2backpack:l2backpack:2.4.12-slim")
+    //runtimeOnly fg.deobf("dev.xkmc.l2complements:l2complements:2.4.18-slim")
+    //runtimeOnly fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.16-slim')
+    //runtimeOnly fg.deobf("dev.xkmc.l2archery:l2archery:2.4.9")
+    //runtimeOnly fg.deobf("dev.xkmc.l2weaponry:l2weaponry:2.4.18")
+    //runtimeOnly fg.deobf("dev.xkmc.l2artifacts:l2artifacts:2.4.8-slim")
 
-    runtimeOnly fg.deobf("curse.maven:create-328085:4626108")
-    implementation fg.deobf("curse.maven:just-enough-effect-descriptions-jeed-532286:4599236")
+    //runtimeOnly fg.deobf("curse.maven:create-328085:4626108")
+    //implementation fg.deobf("curse.maven:just-enough-effect-descriptions-jeed-532286:4599236")
 
-    runtimeOnly fg.deobf("curse.maven:badpackets-615134:4438956")
-    runtimeOnly fg.deobf("curse.maven:wthit-forge-455982:4596739")
-    runtimeOnly fg.deobf("curse.maven:attributefix-280510:4588114")
-    runtimeOnly fg.deobf("curse.maven:bookshelf-228525:4581675")
-    runtimeOnly fg.deobf("curse.maven:enchantment-descriptions-250419:4587429")
-    runtimeOnly fg.deobf("curse.maven:appleskin-248787:4605078")
-    implementation fg.deobf("curse.maven:patchouli-306770:4636277")
+    //runtimeOnly fg.deobf("curse.maven:badpackets-615134:4438956")
+    //runtimeOnly fg.deobf("curse.maven:wthit-forge-455982:4596739")
+    //runtimeOnly fg.deobf("curse.maven:attributefix-280510:4588114")
+    //runtimeOnly fg.deobf("curse.maven:bookshelf-228525:4581675")
+    //runtimeOnly fg.deobf("curse.maven:enchantment-descriptions-250419:4587429")
+    //runtimeOnly fg.deobf("curse.maven:appleskin-248787:4605078")
+    //implementation fg.deobf("curse.maven:patchouli-306770:4636277")
 
     //runtimeOnly fg.deobf("dev.xkmc.traderefresh:traderefresh:2.1.1-slim")
     //runtimeOnly fg.deobf("dev.xkmc.lasertransport:lasertransport:2.2.0.pre5-slim")
