--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,34 @@
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.debug=false
 
-mixingradle_version = 0.7-SNAPSHOT
-mixin_version = 0.8.5
+#read more on this at https://github.com/neoforged/NeoGradle/blob/NG_7.0/README.md#apply-parchment-mappings
+# you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
+neogradle.subsystems.parchment.minecraftVersion=1.20.3
+neogradle.subsystems.parchment.mappingsVersion=2023.12.31
 
-minecraft_version = 1.20.1
-forge_version = 47.1.3
-mixin_extras_version = 0.2.0-beta.8
+minecraft_version=1.20.4
+minecraft_version_range=[1.20.4,1.21)
+neo_version=20.4.80-beta
+neo_version_range=[20.4,)
+loader_version_range=[2,)
+
+## Mod Properties
+mod_id=l2library
+mod_name=L2Library
+mod_license=LGPL-2.1
+mod_version=2.5.0-pre0
+mod_group_id=dev.xkmc
+mod_authors=lcy0x1
+mod_description=Library mod for all L2 mods
+
 registrate_version = MC1.20-1.3.11
 jei_minecraft_version = 1.20.1-forge
 jei_version = 15.2.0.23
 curios_version = 5.3.4+1.20.1
 
-modid = l2library
-ll_version = 2.4.23
 lljij = true
 rootMod = true
+
+l2serial_ver = 2.5.0-pre2
